# beer-rater-fast-api

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  db.py  main.py
app/routes/: ratings.py  users.py
migrations/: env.py
migrations/versions/: 907497509bcd_create_users_table.py  fe63944d7447_create_ratings_table.py
