[tool.poetry]
name = "beer-rater-fast-api"
version = "0.1.0"
description = ""
authors = ["mymorkkis <mvsy@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
sqlalchemy = "^1.4.46"
databases = { extras = ["asyncpg"], version = "^0.7.0" }
black = "^22.12.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
