[tool.poetry]
name = "beer-rater-fast-api"
version = "0.1.0"
description = ""
authors = ["mymorkkis <mvsy@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
psycopg2-binary = "^2.9.6"
alembic = "^1.9.1"
sqlmodel = "^0.0.22"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
